# mujoco-py

./: MANIFEST.in  Makefile  build.sh  pyproject.toml  requirements.txt  setup.py
mujoco_py/: builder.py  version.py
mujoco_py/tests/: test_cymj.py  test_gen_wrappers.py
